# windrosetextsigns

./: .gitignore  CHANGELOG.md  README.md  agents.md  build_windrosetextsigns.ps1  deploy_TextSigns_clean.ps1
Config/: WindroseTextSigns.ini
LuaMods/WindroseTextSignsAssetLoader/Scripts/: main.lua
Source/: CMakeLists.txt
Source/include/WindroseTextSigns/: NativeBridge.hpp  NativeTextEditor.hpp  RelayHttp.hpp  SignTextMod.hpp  UpnpNat.hpp  pch.hpp
Source/src/: NativeBridge.cpp  NativeTextEditor.cpp  RelayHttp.cpp  SignTextMod.cpp  UpnpNat.cpp  dllmain.cpp
_scratch/pak_extract/: Cargo.toml
_scratch/pak_extract/src/: main.rs
_scratch/sidecar_fixture_tests/: SignTexts.json
_scratch/sidecar_fixture_tests/Backups/: SignTexts.backup_20260506_000001.json
build_scripts/: build_windrosetextsigns.cmd  build_windrosetextsigns_short3.cmd  configure_windrosetextsigns.cmd  configure_windrosetextsigns_short3.cmd
dlls/: README.txt
log_archives/20260508_040938_baseline_policy_setup/: manifest.json  summary.txt
log_archives/20260508_041029_internet_client_logs_batch/: manifest.json  summary.txt
log_archives/20260508_133151_my_test/: manifest.json  summary.txt
log_archives/20260508_135005_my_test/: manifest.json  summary.txt
log_archives/replay_harness_runs/20260508_042020/: session_20260506_202200_WindroseTextSigns.json
relay/cloudflare-worker/: README.md  package.json  wrangler.toml
relay/cloudflare-worker/src/: index.js
tools/: analyze_buildmenu_probe.ps1  build_and_deploy_label_category_native_probe.ps1  build_and_deploy_label_text_minimal_clone_probe.ps1  build_and_deploy_label_text_sbm.ps1  build_and_deploy_sbm_one_chest_probe.ps1  build_and_deploy_sbm_original_container_one_chest_probe.ps1  build_and_deploy_ship_noicon_override_diag.ps1  clean_label_test_mods.ps1  clone_wooden_label_text.ps1  deploy_text_signs_asset_loader_lua.ps1  inspect_label_uexp_fields.ps1  package_pencilant_ufont.ps1  prepare_label_text_sbm_template.ps1  run_bridge_fixture_tests.ps1  run_offline_qa.ps1  run_route_discovery_fixture_tests.ps1  run_sidecar_fixture_tests.ps1
(+66 files in other folders)
